# ssh-mcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  ssh_mcp_server.py
scripts/: deploy_to_58_70.ps1  install_local.ps1
systemd/: ssh-mcp.service
